# GuardDog

./: .gitignore  .gitmodules  .htaccess  .htpasswd  CMakeLists.txt  README.md  controller.php  index.html  index.php  main.cpp  service
GuardDog/: CMakeLists.txt  main.cpp
GuardDog/data/: 1hour_endwave.raw  short_headmove.raw
css/: style.css
data/: 5min_nothingmuch.raw  Makefile  addnr  hours_nothing.raw  plotdata.gnuplot  stripdates
